2015-10-13 Added possibility move to common page in GoToPage Module
2015-10-12 Added disabled events configuration.
2015-10-09 Fixed displaying data in LearnPen Data module
2015-10-09 Fixed issue with active tools after changing lesson page in IWB Toolbar module
2015-10-09 Fixed sending notAllAttempted event in Submit module
2015-10-09 Added commands markOptionAs... and new classes on their execute to Choice module
2015-10-09 Added property Is not an activity in Count and Graph module
2015-10-08 Added commands show/hide in Submit module
2015-10-07 Fixed setting visibility and added new version of Swiffy library in Swiffy Animation module
2015-10-06 Fixed problem with displaying data in Graph module
2015-10-05 Fixed isAttempted action in Image Gap module
2015-10-05 Added isAllOK command to Table module
2015-10-05 Added support for calculating time that user spent on each page to PlayerUtils
2015-10-02 Fixed problem with displaying percentage score in LearnPen Report module
2015-09-30 Added increaseMistakeCounter command
2015-09-28 Added classes on show answers and show errors mode in Line Number module
2015-09-28 Added property Page Attempted in Assesment Navigation Bar module
2015-09-28 Fixed saving visibility in state after reset in Text module
2015-09-23 Fixed reading-out data from sensors in LearnPen Report module
2015-09-23 Fixed disabling gap after checking answers in Image Gap module
2015-09-22 Added handling reset in Page Rating module
2015-09-16 Fixed issue with checking answer in Is Equation mode in Basic Math Gaps module
2015-09-16 Fixed check mode and show answers mode connected with Math module in Table module
2015-09-15 Fixed problem with coloring empty dropdown gaps in Text module
2015-09-11 Fixed problem with disabled gaps in show answers mode in Text module
2015-09-11 Fixed problem with displaying page numbers on mLibro in Page Icon Toolbar
2015-09-11 Fixed problem with setting gap width in Table module